# Poietic-python

./: DEBT.md  ERRORS.md  README.md  pyproject.toml
docs/: conf.py  database.rst  evaluation.rst  expression.rst  flows.rst  index.rst  object.rst  value.rst
src/flows/: __init__.py  model.py
src/flows/expression/: __init__.py  expression.py  lexer.py  parser.py
src/holon/: __init__.py  attributes.py  common.py  component.py  database.py  errors.py  frame.py  graph.py  identity.py  metamodel.py  object.py  object_type.py  predicate.py  transaction.py  value.py  version.py
src/holon/db/: __init__.py  component.py  constraints.py  database.py  frame.py  identity.py  mutable_frame.py  object.py  object_type.py  transaction.py  version.py
src/holon/expression/: __init__.py
src/holon/flows/: __init__.py  compiler.py  evaluate.py  example.py  model.py  solver.py
src/holon/flows/expression/: expression.py  lexer.py  (+1 more)
src/holon/graph/: graph.py  predicate.py
src/holon/persistence/: store.py
src/holon/tool/: main.py
src/poietic/: __init__.py  value.py
src/poietic/db/: __init__.py  constraints.py  object.py  object_type.py  version.py
src/poietic/expression/: expression.py  parser.py
src/poietic/flows/: compiler.py  example.py  functions.py  issues.py
src/poietic/graph/: __init__.py  graph.py  predicate.py
src/poietic/tool/: __init__.py  main.py
test/: common.py  test_compiler.py  test_constraints.py  test_database.py  test_evaluate.py  test_expression.py  test_parser.py  test_persistence.py  test_predicate.py  test_snapshot_storage.py  test_solver.py
