[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poietic-core"
version = "0.0.1"
authors = [
  { name="Stefan Urbanek", email="stefan.urbanek@gmail.com" },
]
description = "Poietic Toolkit"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click",
    "sphinx_rtd_theme",
]


[project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
flow = "poietic.tool:tool_main"

[tool.pyright]
exclude = ["build", "dist", "sandbox"]

[tool.mypy]


